v3: Changed the "hidden" buttons and labels to have the style display:none instead of being pushed off the screen (which caused scrolling issues if the container allows y overflow)

--- a/assets/css/oe-eyedraw.css
+++ b/assets/css/oe-eyedraw.css
@@ -167,7 +167,6 @@
   top: 32px;
   white-space: nowrap;
   z-index: 103;
-  pointer-events: none;
   display: none;
 }
 /* line 30, ../sass/components/toolbar/_label.scss */
@@ -184,13 +183,13 @@
   left: -1px;
   display: unset;
 }
-/* line 40, ../sass/components/toolbar/_label.scss */
+/* line 39, ../sass/components/toolbar/_label.scss */
 .ed-button:hover .left {
   left: inherit;
   right: -1px;
   display: unset;
 }
-/* line 47, ../sass/components/toolbar/_label.scss */
+/* line 46, ../sass/components/toolbar/_label.scss */
 .ed-button:active .label, .ed-drawer-open > .ed-button .label {
   -moz-transition-delay: 0s;
   -o-transition-delay: 0s;
@@ -198,7 +197,7 @@
   transition-delay: 0s;
   display: none;
 }
-/* line 54, ../sass/components/toolbar/_label.scss */
+/* line 53, ../sass/components/toolbar/_label.scss */
 .ed-button.disabled:hover .label {
   -moz-transition-delay: 0s;
   -o-transition-delay: 0s;
