--- a/assets/sass/components/toolbar/_label.scss
+++ b/assets/sass/components/toolbar/_label.scss
@@ -24,7 +24,6 @@
 		top: 32px;
 		white-space: nowrap;
 		z-index: 103;
-		pointer-events: none;
 		display:none;
 	}
 	.left {
